// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design management upload button component renders inverted upload design button 1`] = `
<div
  isinverted="true"
>
  <glbutton-stub
    title="Adding a design with the same filename replaces the file in a new version."
    variant="success"
  >
    
    Add designs
    
    <!---->
  </glbutton-stub>
   
  <input
    accept="image/*"
    class="hide"
    multiple="multiple"
    name="design_file"
    type="file"
  />
</div>
`;

exports[`Design management upload button component renders loading icon 1`] = `
<div>
  <glbutton-stub
    disabled="true"
    title="Adding a design with the same filename replaces the file in a new version."
    variant="success"
  >
    
    Add designs
    
    <glloadingicon-stub
      class="ml-1"
      color="orange"
      inline="true"
      label="Loading"
      size="sm"
    />
  </glbutton-stub>
   
  <input
    accept="image/*"
    class="hide"
    multiple="multiple"
    name="design_file"
    type="file"
  />
</div>
`;

exports[`Design management upload button component renders upload design button 1`] = `
<div>
  <glbutton-stub
    title="Adding a design with the same filename replaces the file in a new version."
    variant="success"
  >
    
    Add designs
    
    <!---->
  </glbutton-stub>
   
  <input
    accept="image/*"
    class="hide"
    multiple="multiple"
    name="design_file"
    type="file"
  />
</div>
`;
